# gui/baculum/protected/API/openapi_baculum.json
@@ -592,7 +592,7 @@
 			"put": {
 				"tags": ["clients"],
 				"summary": "Set Client bandwidth limit",
-				"description": "Set Client bandwidth limit in bytesh",
+				"description": "Set Client bandwidth limit in bytes",
 				"responses": {
 					"200": {
 						"description": "Set bandwidth limit output",
@@ -934,6 +934,54 @@
 						"in": "path",
 						"description": "Job identifier",
 						"required":  true,
+						"schema": {
+							"type": "integer"
+						}
+					}
+				]
+			}
+		},
+		"/api/v1/jobs/{jobid}/bandwidth": {
+			"put": {
+				"tags": ["jobs"],
+				"summary": "Set Job bandwidth limit",
+				"description": "Set Job bandwidth limit in bytes",
+				"responses": {
+					"200": {
+						"description": "Set bandwidth limit output",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"output": {
+											"type": "array",
+											"items": {
+												"type": "string",
+												"description": "Bandwidth limit setting output"
+											}
+										},
+										"error": {
+											"type": "integer",
+											"description": "Error code",
+											"enum": [0, 1, 2, 3, 4, 5, 6, 7, 11, 50, 1000]
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"parameters": [
+					{
+						"$ref": "#/components/parameters/JobId"
+					},
+					{
+						"name": "limit",
+						"in": "body",
+						"required": false,
+						"default": 0,
+						"description": "Bandwidth limit in bytes",
 						"schema": {
 							"type": "integer"
 						}
